syntax = "proto3";
import "google/protobuf/wrappers.proto";
import "protos/productbrand.proto";
import "protos/producttype.proto";


option csharp_namespace = "ShoppyEx.Product.Api";

package protos.package;

service ProductGrpc { 
    rpc GetProductAll(ProductsGetAllQuery) returns (ProductListMessage) {}
    rpc GetProductById(GetProductByIdQuery) returns (ProductResponseMessage) {}
}

message GetProductByIdQuery {
     google.protobuf.StringValue Id = 1;
}

message ProductsGetAllQuery {
     google.protobuf.Int32Value   PageIndex = 1;
     google.protobuf.Int32Value   PageSize = 2;
     google.protobuf.StringValue  ProductBrandId =3;
     google.protobuf.StringValue  ProductTypeId = 4;
     google.protobuf.StringValue  Sort = 5;
     google.protobuf.StringValue  Search = 6;
}

message ProductListMessage {
    google.protobuf.Int32Value TotalCount = 1;
    repeated ProductResponseMessage Items = 2;
}

 
   message ProductResponseMessage {    
    google.protobuf.StringValue Id = 1;
    google.protobuf.StringValue Name = 2;
    google.protobuf.StringValue Description = 3;
    google.protobuf.StringValue Price = 4;
    google.protobuf.StringValue PictureUrl = 5;
    google.protobuf.StringValue ProductType = 6;
    google.protobuf.StringValue ProductBrand = 7;
  
}



